# django_sqlite3_viz

./: .gitignore  README.md  manage.py  pyproject.toml
demo_project/: asgi.py  settings.py  urls.py  wsgi.py
sqlite_viz/: api.py  apps.py  schemas.py  services.py  urls.py  views.py
sqlite_viz/templates/sqlite_viz/: index.html
tests/: conftest.py  test_api.py
